<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_exersices">

    <fragment
        android:id="@+id/navigation_results"
        android:name="com.efw.apps.ui.results.ResultsFragment"
        android:label="@string/title_results"
        tools:layout="@layout/fragment_results" />

    <fragment
        android:id="@+id/navigation_exersices"
        android:name="com.efw.apps.ui.exercises.ExercisesFragment"
        android:label="@string/title_exercises"
        tools:layout="@layout/fragment_exercises" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.efw.apps.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />
</navigation>