<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.results.ResultsFragment">

    <com.mursaat.extendedtextview.AnimatedGradientTextView
        android:id="@+id/count_training2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="31dp"
        android:gravity="center"
        android:text="1ч 30м"
        android:textSize="25sp"
        android:textStyle="bold"
        app:angle="45"
        app:colors="@array/funny_colors"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/count_training"
        app:layout_constraintTop_toBottomOf="@+id/all_txt"
        app:layout_constraintVertical_bias="0.0"
        app:maxFPS="30"
        app:simultaneousColors="4"
        app:speed="1000" />

    <com.mursaat.extendedtextview.AnimatedGradientTextView
        android:id="@+id/count_training"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="31dp"
        android:gravity="center"
        android:text="9"
        android:textSize="25sp"
        android:textStyle="bold"
        app:angle="45"
        app:colors="@array/funny_colors"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/all_txt"
        app:layout_constraintVertical_bias="0.0"
        app:maxFPS="30"
        app:simultaneousColors="4"
        app:speed="1000" />

    <ImageView
        android:id="@+id/imageView10"
        android:layout_width="wrap_content"
        android:layout_height="150dp"
        android:src="@drawable/ill"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.19999999" />

    <TextView
        android:id="@+id/all_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:fontFamily="@font/montserrat_regular"
        android:text="@string/all"
        android:textColor="?attr/colorPrimaryVariant"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView10"
        app:layout_constraintVertical_bias="0.25" />

    <TextView
        android:id="@+id/all_txt4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/montserrat_regular"
        android:text="@string/history"
        android:textColor="?attr/colorPrimaryVariant"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view2"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/all_txt2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_regular"
        android:text="@string/training"
        android:textColor="?attr/colorPrimaryVariant"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/count_training"
        app:layout_constraintStart_toStartOf="@+id/count_training"
        app:layout_constraintTop_toBottomOf="@+id/count_training"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/all_txt3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_regular"
        android:text="@string/time"
        android:textColor="?attr/colorPrimaryVariant"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/count_training2"
        app:layout_constraintStart_toStartOf="@+id/count_training2"
        app:layout_constraintTop_toBottomOf="@+id/count_training2"
        app:layout_constraintVertical_bias="0.0" />

    <View
        android:id="@+id/view2"
        android:layout_width="0dp"
        android:layout_height="2dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:background="?attr/colorOnPrimary"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/all_txt3"
        app:layout_constraintVertical_bias="0.100000024" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/calendar_results"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="2dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/all_txt4" />

</androidx.constraintlayout.widget.ConstraintLayout>