<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.profile.ProfileFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/user_name3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="25dp"
                    android:layout_marginTop="25dp"
                    android:fontFamily="@font/montserrat_regular"
                    android:text="@string/your_profile"
                    android:textColor="?attr/colorPrimaryVariant"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.0" />

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/imageView"
                    android:layout_width="75dp"
                    android:layout_height="75dp"
                    android:layout_marginStart="25dp"
                    android:layout_marginTop="10dp"
                    android:src="@mipmap/ic_launcher_round"
                    app:civ_border_color="?attr/colorSecondaryVariant"
                    app:civ_border_width="2dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/user_name3"
                    app:layout_constraintVertical_bias="0.0" />

                <TextView
                    android:id="@+id/text_notifications"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:textAlignment="center"
                    android:textSize="20sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/user_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat_regular"
                    android:text="TextView"
                    android:textColor="?attr/colorPrimaryVariant"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="@+id/imageView"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/imageView"
                    app:layout_constraintTop_toTopOf="@+id/imageView"
                    app:layout_constraintVertical_bias="0.25" />

                <TextView
                    android:id="@+id/user_email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat_regular"
                    android:text="TextView"
                    android:textColor="?attr/colorPrimaryVariant"
                    android:textSize="14sp"
                    app:layout_constraintBottom_toBottomOf="@+id/imageView"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/imageView"
                    app:layout_constraintTop_toBottomOf="@+id/user_name"
                    app:layout_constraintVertical_bias="0.16000003" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="20dp"
                android:visibility="gone">

                <TextView
                    android:id="@+id/user_parameters_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat_regular"
                    android:text="@string/your_name"
                    android:textColor="?attr/colorPrimaryVariant"
                    android:textSize="13sp"
                    app:layout_constraintBottom_toTopOf="@+id/user_parameters"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="@+id/user_parameters"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/user_parameters"
                    android:layout_width="0dp"
                    android:layout_height="35dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="125dp"
                    android:background="@drawable/background_text_profile"
                    android:ems="10"
                    android:fontFamily="@font/montserrat_regular"
                    android:inputType="textPersonName"
                    android:paddingStart="10dp"
                    android:textColor="?attr/colorPrimaryVariant"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="1.0"
                    tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="20dp"
                android:visibility="gone">

                <TextView
                    android:id="@+id/user_email2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat_regular"
                    android:text="@string/your_age"
                    android:textColor="?attr/colorPrimaryVariant"
                    android:textSize="13sp"
                    app:layout_constraintBottom_toTopOf="@+id/user_age"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="@+id/user_age"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/user_age"
                    android:layout_width="0dp"
                    android:layout_height="35dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="125dp"
                    android:background="@drawable/background_text_profile"
                    android:ems="10"
                    android:fontFamily="@font/montserrat_regular"
                    android:inputType="numberSigned"
                    android:paddingStart="10dp"
                    android:textColor="?attr/colorPrimaryVariant"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="1.0"
                    tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="20dp">

                <ImageView
                    android:id="@+id/imageView11"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/ic_crown"
                    android:translationZ="15dp"
                    app:layout_constraintBottom_toBottomOf="@+id/buy_pro_bttn"
                    app:layout_constraintEnd_toEndOf="@+id/buy_pro_bttn"
                    app:layout_constraintHorizontal_bias="0.9"
                    app:layout_constraintStart_toStartOf="@+id/buy_pro_bttn"
                    app:layout_constraintTop_toTopOf="@+id/buy_pro_bttn"
                    app:layout_constraintVertical_bias="0.45" />

                <com.karacce.buttom.Buttom
                    android:id="@+id/buy_pro_bttn"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_gravity="center"
                    android:layout_marginStart="25dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="125dp"
                    android:layout_marginBottom="5dp"
                    android:text="@string/buy_pro"
                    android:textColor="#FFFFFF"
                    app:buttom_corner_radius="12dp"
                    app:buttom_gradient_end_color="#3A7BD5"
                    app:buttom_gradient_orientation="left_right"
                    app:buttom_gradient_start_color="#00D2FF"
                    app:buttom_gradient_type="linear"
                    app:buttom_type="gradient"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.39999998" />


            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/user_name4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginTop="25dp"
                android:fontFamily="@font/montserrat_regular"
                android:text="@string/general_settings"
                android:textColor="?attr/colorPrimaryVariant"
                android:textSize="15sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/language"
                android:layout_width="match_parent"
                android:layout_height="60dp">

                <TextView
                    android:id="@+id/language_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:fontFamily="@font/montserrat_regular"
                    android:text="@string/language_app"
                    android:textColor="?attr/colorPrimaryVariant"
                    android:textSize="15sp"
                    app:layout_constraintBottom_toBottomOf="@+id/language_img"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toEndOf="@+id/language_img"
                    app:layout_constraintTop_toTopOf="@+id/language_img" />

                <ImageView
                    android:id="@+id/language_img"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginStart="25dp"
                    android:src="@drawable/ic_globe"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/share"
                android:layout_width="match_parent"
                android:layout_height="60dp">

                <TextView
                    android:id="@+id/share_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:fontFamily="@font/montserrat_regular"
                    android:text="@string/share_app"
                    android:textColor="?attr/colorPrimaryVariant"
                    android:textSize="15sp"
                    app:layout_constraintBottom_toBottomOf="@+id/share_img"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toEndOf="@+id/share_img"
                    app:layout_constraintTop_toTopOf="@+id/share_img" />

                <ImageView
                    android:id="@+id/share_img"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginStart="25dp"
                    android:src="@drawable/ic_paperplaneright"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/rate"
                android:layout_width="match_parent"
                android:layout_height="60dp">

                <TextView
                    android:id="@+id/rate_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:fontFamily="@font/montserrat_regular"
                    android:text="@string/rate_app"
                    android:textColor="?attr/colorPrimaryVariant"
                    android:textSize="15sp"
                    app:layout_constraintBottom_toBottomOf="@+id/rate_img"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toEndOf="@+id/rate_img"
                    app:layout_constraintTop_toTopOf="@+id/rate_img" />

                <ImageView
                    android:id="@+id/rate_img"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginStart="25dp"
                    android:src="@drawable/ic_star"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/contact"
                android:layout_width="match_parent"
                android:layout_height="60dp">

                <TextView
                    android:id="@+id/contact_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:fontFamily="@font/montserrat_regular"
                    android:text="@string/contact_developer"
                    android:textColor="?attr/colorPrimaryVariant"
                    android:textSize="15sp"
                    app:layout_constraintBottom_toBottomOf="@+id/contact_img"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toEndOf="@+id/contact_img"
                    app:layout_constraintTop_toTopOf="@+id/contact_img" />

                <ImageView
                    android:id="@+id/contact_img"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginStart="25dp"
                    android:src="@drawable/ic_phone"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>